Add log and fix rabbitMQ multiple cases bug

--- a/qhuoj-controller/src/main/resources/application-dev.yml
+++ b/qhuoj-controller/src/main/resources/application-dev.yml
@@ -41,3 +41,9 @@ spring:
         acknowledge-mode: manual
       simple:
         acknowledge-mode: manual
+logging:
+  file:
+    path: /tmp/log/
+    name: qhuoj.log
+  level:
+    root: info
